# GnomeTicTacToe

./: Makefile.am  Makefile.in  README.md  configure  configure.ac
Debug/: Makefile  config.h  config.status  libtool
Debug/po/: Makefile  Makefile.in  POTFILES
Debug/src/: Makefile  round_cross_game
Debug/src/.deps/: main.Po
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
src/: Makefile.am  Makefile.in  main.c~  round_cross_game.ui
